@@ -171,7 +171,8 @@ class ChangesList {
 			? 'rcid='.$rc->mAttribs['rc_id']
 			: '';
 		$articlelink = ' '. $this->skin->makeKnownLinkObj( $rc->getTitle(), '', $params );
-		if($watched) $articlelink = '<strong>'.$articlelink.'</strong>';
+		if( $watched )
+			$articlelink = "<strong class=\"mw-watched\">{$articlelink}</strong>";
 		global $wgContLang;
 		$articlelink .= $wgContLang->getDirMark();
 
@@ -568,7 +569,7 @@ class EnhancedChangesList extends ChangesList {
 	function maybeWatchedLink( $link, $watched=false ) {
 		if( $watched ) {
 			// FIXME: css style might be more appropriate
-			return '<strong>' . $link . '</strong>';
+			return '<strong class="mw-watched">' . $link . '</strong>';
 		} else {
 			return $link;
 		}
